finished experience section.

--- a/index.html
+++ b/index.html
@@ -189,46 +189,50 @@
 
     <!-- 3. experience section -->
     <section class="experience" id="experience">
-      <div class="heading-block">
+      <div class="heading-block heading-block--2">
         <h2 class="heading--2">experience</h2>
       </div>
 
       <div class="experience-container">
         <div class="experience-work">
           <div class="experience-work__img">
-            <img src="" alt="">
+            <img src="./resources/cdk.png" alt="">
           </div>
           <div class="experience-work__content">
-            <h4 class="experience-work__content--company">CDK Global &nbsp;|&nbsp; Software Engineer Intern</h4>
+            <h4 class="experience-work__content--company">Software Engineer Intern&nbsp; <span>@&nbsp; CDK Global</span></h4>
+            <h5 class="experience-work__content--date">May 2022 - Aug 2022</h5>
             <div class="experience-work__content--points">
-              <p> • Incoming SDE Intern on xxx and xxx team in Waterloo, Ontario; working with xx, xxx, xxx and xxx</p>
+              <p><span>▹</span> Incoming SDE Intern on xxx and xxx team in Waterloo, Ontario; working with xx, xxx, xxx and xxx</p>
+              <p><span>▹</span> Will update once internship is done</p>
             </div>
           </div>
         </div>
 
         <div class="experience-work">
           <div class="experience-work__img">
-            <img src="" alt="">
+            <img src="./resources/laurier.jpg" alt="">
           </div>
           <div class="experience-work__content">
-            <h4 class="experience-work__content--company">Wilfrid Laurier University &nbsp;|&nbsp; Teaching Assistant</h4>
+            <h4 class="experience-work__content--company">Teaching Assistant&nbsp; <span>@&nbsp; Wilfrid Laurier University</span></h4>
+            <h5 class="experience-work__content--date">Sept 2021 - Present</h5>
             <div class="experience-work__content--points">
-              <p> • Supported 100+ students by leading weekly labs to reinforce fundamental programming concepts</p>
-              <p> • Aided in students’ success by answering questions and providing feedback on graded lab tasks</p>
+              <p><span>▹</span> Supported 100+ students by leading weekly labs to reinforce fundamental programming concepts</p>
+              <p><span>▹</span> Aided in students’ success by answering questions and providing feedback on graded lab tasks</p>
             </div>
           </div>
         </div>
 
         <div class="experience-work">
           <div class="experience-work__img">
-            <img src="" alt="">
+            <img src="./resources/dalvina.jpg" alt="">
           </div>
           <div class="experience-work__content">
-            <h4 class="experience-work__content--company">Dalvina Canada &nbsp;|&nbsp; Technical Assistant</h4>
+            <h4 class="experience-work__content--company">Technical Assistant&nbsp; <span>@&nbsp; Dalvina Canada</span></h4>
+            <h5 class="experience-work__content--date">June 2017 - Aug 2019</h5>
             <div class="experience-work__content--points">
-              <p> • Communicated with clients regarding orders, promotions, and for general inquiries on the products</p>
-              <p> • Maintained the front end of the company website through periodic updates to help promote newer products</p>
-              <p> •  Automated inventory updating and increased processing speed of client order forms by 40% with VBA</p>
+              <p><span>▹</span> Communicated with clients regarding orders, promotions, and for general inquiries on the products</p>
+              <p><span>▹</span> Maintained the front end of the company website through periodic updates to help promote newer products</p>
+              <p><span>▹</span> Automated inventory updating and increased processing speed of client order forms by 40% with VBA</p>
             </div>
           </div>
         </div>
