add experience section to navbar.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             >
           </li>
           <li class="navigation__item">
-            <a href="#skills"
-              ><p>Skills</p></a
+            <a href="#experience"
+              ><p>Experience</p></a
             >
           </li>
           <li class="navigation__item">
@@ -110,6 +110,11 @@
         <li class="new_navbar__list--item">
           <a href="#about">
             <p>About</p>
+          </a>
+        </li>
+         <li class="new_navbar__list--item">
+          <a href="#experience">
+            <p>Experience</p>
           </a>
         </li>
         <li class="new_navbar__list--item">
