--- a/index.html
+++ b/index.html
@@ -175,10 +175,7 @@
                 <h2 class="heading--2">about me</h2>
               </div>
                 <p>
-                    I'm a teaching assistant and third year computer science student at Wilfrid Laurier University, with an interest in full stack web development, and creating clean looking designs. I am actively looking for Summer 2022 SWE Internship opportunities!
-                </p>
-                <p>
-                    At the moment, I'm working on improving my skills with React, bettering my overall design skills, and further improving my algorithms knowledge. 
+                    I'm currently working as a Software Development Intern at Nuance - Microsoft for the fall term and I am actively looking for Summer 2023 SDE internship opportunities! I have a strong interest in software engineering as a whole and I'm passionate about web development and creating clean looking designs.
                 </p>
                 <p>
                     Outside of development, some of my other interests include snowboarding, basketball, video games, and many more!
@@ -197,8 +194,25 @@
       <div class="heading-block heading-block--2">
         <h2 class="heading--2">experience</h2>
       </div>
+      
 
       <div class="experience-container">
+
+        <div class="experience-work">
+          <div class="experience-work__img">
+            <img src="./resources/nuance.jpg" alt="">
+          </div>
+          <div class="experience-work__content">
+            <h3 class="experience-work__content--company">Software Development Intern&nbsp; <span>@&nbsp; Nuance Communications - Microsoft</span></h3>
+            <h5 class="experience-work__content--date">Sep 2022 - Dec 2022</h5>
+            <div class="experience-work__content--points">
+              <p><span>▹</span> Migrated 20+ class components to functional components with React, following newest standards for state and hooks</p>
+              <p><span>▹</span> Created and improved on existing component unit tests with Jest, resulting in an increase to code coverage by 22%</p>
+              <p><span>▹</span> Incorporated Storybook for 10+ components allowing for isolated testing of changes made to styling/interactivity</p>
+            </div>
+          </div>
+        </div>
+
         <div class="experience-work">
           <div class="experience-work__img">
             <img src="./resources/cdk.png" alt="">
@@ -207,8 +221,10 @@
             <h3 class="experience-work__content--company">Software Engineer Intern&nbsp; <span>@&nbsp; CDK Global</span></h3>
             <h5 class="experience-work__content--date">May 2022 - Aug 2022</h5>
             <div class="experience-work__content--points">
-              <p><span>▹</span> Incoming SDE Intern on xxx and xxx team in Waterloo, Ontario; working with xx, xxx, xxx and xxx</p>
-              <p><span>▹</span> Will update once internship is done</p>
+              <p><span>▹</span> Collaborated in a team of 10 on the development of multifaceted dealership solutions; improving customer service, sales, financing and insurance software for 15000+ dealerships in North America and 55% of the United States</p>
+              <p><span>▹</span> Implemented a feature that applies a reduced provincial sales tax on 26% of all zero emission vehicles in Canada</p>
+              <p><span>▹</span> Extended on API endpoints with C#, providing sales quotes/vehicle information to over 250 automotive partners</p>
+              <p><span>▹</span> Improved documentation of code and created detailed test plans for 5+ features/bug fixes with Jira and Confluence</p>
             </div>
           </div>
         </div>
@@ -219,10 +235,11 @@
           </div>
           <div class="experience-work__content">
             <h3 class="experience-work__content--company">Teaching Assistant&nbsp; <span>@&nbsp; Wilfrid Laurier University</span></h3>
-            <h5 class="experience-work__content--date">Sept 2021 - Present</h5>
+            <h5 class="experience-work__content--date">Sep 2021 - Jun 2022</h5>
             <div class="experience-work__content--points">
-              <p><span>▹</span> Supported 100+ students by leading weekly labs to reinforce fundamental programming concepts</p>
-              <p><span>▹</span> Aided in students’ success by answering questions and providing feedback on graded lab tasks</p>
+              <p><span>▹</span> Debugged and resolved defects in testing scripts, providing accurate assignment marks in 5-7 days for 200+ students</p>
+              <p><span>▹</span> Educated 100+ students by leading weekly labs to reinforce fundamental programming concepts in Python</p>
+              <p><span>▹</span> Facilitated learning by hosting virtual office hours 2x a week for 1-2 hours each session; answered questions on course content, helped students debug code and provided feedback on graded assignments/lab tasks</p>
             </div>
           </div>
         </div>
@@ -233,11 +250,11 @@
           </div>
           <div class="experience-work__content">
             <h3 class="experience-work__content--company">Technical Assistant&nbsp; <span>@&nbsp; Dalvina Canada</span></h3>
-            <h5 class="experience-work__content--date">June 2017 - Aug 2019</h5>
+            <h5 class="experience-work__content--date">Jun 2017 - Aug 2019</h5>
             <div class="experience-work__content--points">
-              <p><span>▹</span> Communicated with clients regarding orders, promotions, and for general inquiries on the products</p>
-              <p><span>▹</span> Maintained the front end of the company website through periodic updates to help promote newer products</p>
-              <p><span>▹</span> Automated inventory updating and increased processing speed of client order forms by 40% with VBA</p>
+              <p><span>▹</span> Automated inventory updating and increased processing speed of client order forms by 43% with VBA</p>
+              <p><span>▹</span> Communicated with clients 3-4x per week in regards to orders, promotions and general inquiries on the products</p>
+              <p><span>▹</span> Updated company site using CSS and JavaScript to help promote new products; resulting in a 21% increase to sales</p>
             </div>
           </div>
         </div>
