update projects, resume

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a href="resources/martin_klasninovski_resume.pdf" target="_blank">
+            <a href="resources/Martin-Klasninovski-Resume.pdf" target="_blank">
               <p>Resume</p>
             </a>
           </li>
@@ -128,7 +128,7 @@
           </a>
         </li>
         <li class="new_navbar__list--item">
-          <a href="resources/martin_klasninovski_resume.pdf" target="_blank">
+          <a href="resources/Martin-Klasninovski-Resume.pdf" target="_blank">
             <p>Resume</p>
           </a>
         </li>
@@ -302,7 +302,7 @@
               <svg class="skills__details--icon">
                 <use xlink:href="resources/sprite.svg#icon-javascript"></use>
               </svg>
-              <p class="skills__details--text">Javascript</p>
+              <p class="skills__details--text">JavaScript</p>
             </li>
 
             <li class="skills__details">
@@ -376,6 +376,29 @@
       <div class="heading-block">
         <h2 class="heading--2">some of my projects</h2>
       </div>
+
+      <div class="projects-container project-0">
+        <div class="projects-container__info">
+          <h3 class="heading--3">Ecommerce Site</h3>
+          <h5 class="heading--5">An ecommerce shoe store with a responsive front end that displays 20+ of the most popular shoes in 2021/2022; includes a shopping cart, login/signup system and a checkout system. </h5>
+          <ul class="projects-container__info--skills">
+              <li class="projects-container__info--skills-item">HTML</li>
+              <li class="projects-container__info--skills-item">CSS</li>
+              <li class="projects-container__info--skills-item">PHP</li>
+              <li class="projects-container__info--skills-item">JavaScript</li>
+              <li class="projects-container__info--skills-item">MySQL</li>
+          </ul>
+          <ul class="projects-container__info--links">
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://github.com/mklaso/ecommerce-shoes" target="_blank">Github</a>
+            </li>
+          </ul>
+        </div>
+        <div class="projects-container__pictures projects-container__pictures-0">
+        </div>
+        </div>
+      </div>
+
       <div class="projects-container projects-container--project-1">
         <div class="projects-container__pictures projects-container__pictures-1">
             <!-- <img src="resources/project-1d.png" alt="Site logo" class="projects-container__pictures--picture-1" /> -->
@@ -394,10 +417,6 @@
                 <a href="https://github.com/mklaso/weather-app"
                 target="_blank">Github</a>
             </li>
-
-            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
-                <a href="#">View Demo</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -411,7 +430,7 @@
               <li class="projects-container__info--skills-item">HTML</li>
               <li class="projects-container__info--skills-item">CSS</li>
               <li class="projects-container__info--skills-item">SCSS</li>
-              <li class="projects-container__info--skills-item">Javascript</li>
+              <li class="projects-container__info--skills-item">JavaScript</li>
           </ul>
           <ul class="projects-container__info--links">
             <li class="projects-container__info--links-link-btn">
@@ -445,10 +464,6 @@
             <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
                 <a href="#">Github</a>
             </li>
-
-            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
-                <a href="#">View Demo</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -468,10 +483,6 @@
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/face-recognition"
                 target="_blank">Github</a>
-            </li>
-
-            <li class="projects-container__info--links-link-btn">
-                <a href="#">View Live</a>
             </li>
           </ul>
         </div>
